src/go/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: echo
  namespace: everest
spec:
  ingressClassName: nginx
  rules:
  - host: echo.satreix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
  tls:
    - hosts:
        - echo.satreix.com
      secretName: echo.satreix.com-tls
